# oxideav-opus

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICES  README.md
.github/workflows/: fuzz.yml
fuzz/: Cargo.toml
fuzz/examples/: scan_histogram.rs  scan_silence.rs
fuzz/fuzz_targets/: celt_encode_roundtrip.rs  decode_packet.rs  decode_packet_fec.rs  multistream_decode.rs  opus_oracle_decode.rs  panic_free_decode.rs  range_roundtrip.rs  roundtrip.rs
fuzz/src/: lib.rs
src/: celt_alloc_encode.rs  celt_alloc_search.rs  celt_alloc_trim.rs  celt_analysis.rs  celt_band_boost.rs  celt_band_decode.rs  celt_band_encode.rs  celt_band_layout.rs  celt_band_shape.rs  celt_band_thresh.rs  celt_cache_caps50.rs  celt_coarse_energy.rs  celt_deemphasis.rs  celt_denormalise.rs  celt_e_prob_model.rs  celt_energy_encode.rs  celt_fine_energy.rs  celt_frame_decode.rs  celt_frame_encode.rs  celt_frame_prefix.rs  celt_header.rs  celt_imdct.rs  celt_laplace.rs  celt_log2_frac_table.rs  celt_mdct_synthesis.rs  celt_mdct_window.rs  celt_overlap_add.rs  celt_packet_encode.rs  celt_post_filter.rs  celt_pulse_cache.rs  celt_pvq_decode.rs  celt_pvq_encode.rs  celt_pvq_v.rs  celt_rate_alloc.rs  celt_redundancy.rs  celt_reservations.rs  celt_spreading.rs  celt_static_alloc.rs  celt_synthesis.rs  celt_tf_adjust.rs  (+47 more)
src/silk/: encoder.rs  excitation.rs  lsf.rs  ltp.rs  mod.rs  pitch_analysis.rs  shell.rs  synth.rs  tables.rs
tests/: celt_encode_roundtrip.rs  celt_fixture_decode.rs  celt_synthesis_roundtrip.rs  docs_corpus.rs  encoder_roundtrip.rs  fec_decode.rs  hybrid_encode_roundtrip.rs  hybrid_roundtrip.rs  malformed_input.rs  mode_switching_decode.rs  multistream_decode.rs  packing_fixture_decode.rs  plc_decode.rs  roundtrip.rs  silk_fixture_decode.rs  silk_reference_waveform.rs
tests/fixtures/: README.md  celt-2.5ms-low-latency.opus  celt-fb-stereo-128kbps.opus  code-0-single-frame.opus  code-1-two-equal-frames.opus  code-2-two-different-frames.opus  code-3-arbitrary-frames-with-padding.opus  fec-on.opus  hybrid-fb-mono-28kbps.opus  mode-switching.opus  multistream-5.1.opus  pair-mono-48k-64kbps.opus  pair-stereo-48k-64kbps.opus  silence-low-bitrate.opus  silk-mb-60ms-mono-20kbps.opus  silk-nb-mono-16kbps.opus  silk-wb-stereo-20kbps.opus
