[package]
name = "oxideav-opus"
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
license = "MIT AND BSD-3-Clause"
repository = "https://github.com/OxideAV/oxideav-opus"
authors = ["Mark Karpeles"]
description = "Opus audio codec for oxideav — SILK + CELT decode (mono/stereo), CELT-only full-band encode, SILK-only encode (NB/MB/WB, mono+stereo, 10/20/40/60 ms)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-opus"
keywords = ["multimedia", "audio", "opus", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
oxideav-celt = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"

[dev-dependencies]
oxideav-ogg = "0.1"
